tests/purs/failing/MultipleErrorsInOneRow.out
Error 1 of 2:

  in module [33mA[0m
  at tests/purs/failing/MultipleErrorsInOneRow.purs:7:3 - 7:17 (line 7, column 3 - line 7, column 17)

    Could not match type
    [33m        [0m
    [33m  String[0m
    [33m        [0m
    with type
    [33m     [0m
    [33m  Int[0m
    [33m     [0m

  while trying to match type [33m               [0m
                             [33m  ( a :: String[0m
                             [33m  , b :: String[0m
                             [33m  ...          [0m
                             [33m  )            [0m
                             [33m               [0m
    with type [33m            [0m
              [33m  ( a :: Int[0m
              [33m  , b :: Int[0m
              [33m  ...       [0m
              [33m  | t0      [0m
              [33m  )         [0m
              [33m            [0m
  while checking that expression [33mcase $0 of           [0m
                                 [33m  { a: 0, b: 0 } -> 0[0m
                                 [33m  {  } -> 0          [0m
    has type [33mInt[0m
  in value declaration [33mf[0m

  where [33mt0[0m is an unknown type

  See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
  or to contribute content related to this error.

Error 2 of 2:

  in module [33mA[0m
  at tests/purs/failing/MultipleErrorsInOneRow.purs:7:3 - 7:17 (line 7, column 3 - line 7, column 17)

    Could not match type
    [33m        [0m
    [33m  String[0m
    [33m        [0m
    with type
    [33m     [0m
    [33m  Int[0m
    [33m     [0m

  while trying to match type [33m               [0m
                             [33m  ( a :: String[0m
                             [33m  , b :: String[0m
                             [33m  ...          [0m
                             [33m  )            [0m
                             [33m               [0m
    with type [33m            [0m
              [33m  ( a :: Int[0m
              [33m  , b :: Int[0m
              [33m  ...       [0m
              [33m  | t0      [0m
              [33m  )         [0m
              [33m            [0m
  while checking that expression [33mcase $0 of           [0m
                                 [33m  { a: 0, b: 0 } -> 0[0m
                                 [33m  {  } -> 0          [0m
    has type [33mInt[0m
  in value declaration [33mf[0m

  where [33mt0[0m is an unknown type

  See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
  or to contribute content related to this error.

